welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vacation == false) {
        ^