welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	
	if (vacation == false) {
	if(weekday){
			return true ;
	
	}else{
			return false ;
	}
	}
}
